# Monary

./: .gitignore  README.rst  build.py  pyproject.toml  setup.py
docs/source/: conf.py  faq.rst  tutorial.rst
docs/source/examples/: aggregation.rst  binary.rst  block-query.rst  connection.rst  insert.rst  monary-param.rst  query.rst  string.rst  timestamp.rst
monary_mongo/: cmonary.c  cmonary.h  monary_mongo.py
tests/timing/: insert_monary.py  query_monary.py  query_monary_block.py
