[tool.poetry]
name = "Monary"
version = "0.5.0"
description = "Monary performs high-performance column queries on MongoDB"
authors = ["David J. C. Beach <info@djcinnovations.com>", "Andrew Gigena <mail@andrewgigena.dev"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Environment :: Console",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "*"
pkgconfig = "*"
