[tool.poetry]
name = "monary_mongo"
version = "0.5.1"
description = "Monary performs high-performance column queries on MongoDB"
authors = ["Andrew Gigena <mail@andrewgigena.dev>", "David J. C. Beach <info@djcinnovations.com>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Environment :: Console",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"

[build-system]
requires = ["poetry>=1.2.1", "setuptools", "pkgconfig"]
build-backend = "poetry.masonry.api"
